Fixed icon arrow position's of main menu. Fixed page title h1 font size and spacing. Fixed pages title and minor misc fixes.

--- a/src/assets/styles/flashflex/pages/_common.scss
+++ b/src/assets/styles/flashflex/pages/_common.scss
@@ -55,6 +55,7 @@
 
 	    h1, h2, h3 {
 	    	margin: 0 0 p(20);
+	    	font-size: 3rem;
 	    }
 
 	    .with-page-title {
